* Separated out VAO bind from attribute enabling  * Added bunny and teapot obj files  * Created skeleton wavefront file importer within skeleton  * Removed remaining vertexAttribute code from VBO  * Implemented greedy vertex normal calculation  * Added jQuery  * Implemented ItemHash to be used to store key associations for renderable structures  * Added Basic and BasicColor shader programs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style type="text/css">
 
     </style>
-    <script src="js/require-jquery.js" data-main="js/main"></script>
+    <script src="js/require-jquery.js" data-main="js/test"></script>
 </head>
 <body>
     <canvas id="the-gls" width="1024" height="600"></canvas>
